k8s/django-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  namespace: django-app
  labels:
    app: django-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: django-app
          image: ghcr.io/ollypale/django-kubernetes-app:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: django-app
spec:
  selector:
    app: django-app
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
